# hgb-ai-data-energy-aware-production

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-uv  README.md  connect_pv_to_instance.html  connect_pv_to_instances.html  mkdocs.yml  pyproject.toml
.devcontainer/: .env  devcontainer.json  docker-compose.yml
.github/workflows/: deploy-docs.yml
docs/: behinde_the_scenes.md  data_package.md  faq.md  index.md  misc.md  problem_formulation.md  problem_instance_structure.md  reference.md  usage.md
docs/js/: math-render.js
docs/notebooks/: 1_pv_energy_aware_production.html  2_scheduling_instances.html  3_scheduling_coupling_with_pv.html
energy_aware_production/: data_package.py  helper.py
energy_aware_production_data/: __init__.py  data_package.py  helper.py
notebooks/: 0_open_mastr_download.py  1_pv_energy_aware_production.py  2_scheduling_instances.py  3_scheduling_coupling_with_pv.py  pv_energy_aware_production.py  scheduling_instances.py
